--- a/style/style.css
+++ b/style/style.css
@@ -67,10 +67,107 @@ body{
 .header__link:hover{
     color: #FF6464;
     cursor: pointer;
-    transition: color 0.3s ease 0s;
+    transition: color 0.3 s ease 0s;
 }
 
 /*--------------MAIN-----------*/
 .page__container{
-    background-color: greenyellow;
 }
+
+.page__main{
+
+} 
+
+.main-block{
+
+} 
+.tittle{
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 1.36;
+} 
+
+.main-block__container{
+    display: flex;
+    align-items: flex-start;
+    padding-top: 128px;
+    padding-bottom: 71px;
+    gap: 115px;
+} 
+.main-block__text{
+    margin-bottom: 35px;
+} 
+.main-block__tittle{
+    margin-bottom: 25px;
+
+} 
+@media (max-width: 825px){
+    .main-block__container{
+        padding-top: 50px;
+        gap: 50px;
+    }
+}
+@media (max-width: 595px){
+    .main-block__container{
+        flex-direction: column;
+        padding-top: 15px;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+    .main-block__avatar{
+        order: 1;
+        width: 170px;
+        height: 170px;
+    } 
+    .main-block__avatar img{
+        max-width: 100%;
+    }
+    .main-block__content{
+        order: 2;
+        text-align: center;
+    }
+    .tittle{
+        font-size: 30px;
+    }
+    .main-block__text{
+        margin-bottom: 15px;
+    } 
+    .main-block__tittle{
+        margin-bottom: 20px;
+    }
+}
+
+.main-block__content{
+    max-width: 497px;
+} 
+
+
+
+.text{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+} 
+
+.main-block__button{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.45;
+    color: #FFFFFF;
+    background-color: #FF6464;
+    border-radius: 2px;
+    padding: 9px 21px 9px 21px;
+    transition: background-color 0.3s ease 0s;
+    
+} 
+.main-block__button:hover{
+    background-color: #c91616;
+}
+
+.main-block__avatar{
+
+} 
+ .main-block__avatar img{
+    
+ }
